force-app/main/default/objects/Product_Forecast__c/Product_Forecast__c.object-meta.xml
<CustomObject>
    <label>Product Forecast</label>
    <nameField>
        <displayFormat>Forecast - {0000}</displayFormat>
        <label>Forecast Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>