force-app/main/default/objects/Product_Forecast__c/fields/Actual_Quantity_KG__c.field-meta.xml
<CustomField>
    <fullName>Actual_Quantity_KG__c</fullName>
    <description>Actuals (KG) computed daily by ForecastActualsScheduler from Invoice_item__c.Net_Weight_in_KG__c matched on Owner + Product + Store.</description>
    <label>Actual Quantity (KG)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>