force-app/main/default/objects/Product_Forecast__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <description>Timestamp when the manager approved the forecast. Set by the approval process final-approval field update.</description>
    <label>Approved Date</label>
    <type>DateTime</type>
</CustomField>