force-app/main/default/objects/Product_Forecast__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Last day of the forecast month, derived from Start_Date__c.</description>
    <formula>IF(
  ISBLANK(Start_Date__c),
  NULL,
  ADDMONTHS(Start_Date__c, 1) - 1
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>