force-app/main/default/objects/Product_Forecast__c/fields/Forecast_KG__c.field-meta.xml
<CustomField>
    <fullName>Forecast_KG__c</fullName>
    <description>Forecast quantity normalised to KG. Used by the actuals scheduler to compare against Invoice_item__c.Net_Weight_in_KG__c.</description>
    <formula>IF(ISPICKVAL(Forecast_UOM__c, &quot;TON&quot;), Forecast__c * 1000, Forecast__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast (KG)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>