force-app/main/default/objects/Product_Forecast__c/fields/Forecast_UOM__c.field-meta.xml
<CustomField>
    <fullName>Forecast_UOM__c</fullName>
    <description>Unit of measure for the entered forecast quantity (KG or TON).</description>
    <label>Forecast UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KG</fullName>
                <default>true</default>
                <label>KG</label>
            </value>
            <value>
                <fullName>TON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>