force-app/main/default/objects/Product_Forecast__c/fields/Forecast_Year__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Year__c</fullName>
    <description>Year for which the forecast applies. Combined with Forecast_Month__c to derive Start_Date__c / End_Date__c.</description>
    <label>Forecast Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2026</fullName>
            </value>
            <value>
                <fullName>2027</fullName>
            </value>
            <value>
                <fullName>2028</fullName>
            </value>
            <value>
                <fullName>2029</fullName>
            </value>
            <value>
                <fullName>2030</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>