force-app/main/default/objects/Product_Forecast__c/fields/Is_Monthly_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Is_Monthly_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the record is created via the BRD monthly forecast flow (Distributor + Sub Group + Month/Year). Gates the BRD validation rules so legacy weekly forecasts (ForeCastController) keep working.</description>
    <label>Is Monthly Forecast</label>
    <type>Checkbox</type>
</CustomField>