force-app/main/default/objects/Product_Forecast__c/fields/Product_Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Group__c</fullName>
    <description>Product Sub Group for this forecast. Reuses the global value set used by Product__c.Product_Sub_Group__c.</description>
    <label>Product Sub Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Sub_Group</valueSetName>
    </valueSet>
</CustomField>