force-app/main/default/objects/Product_Forecast__c/fields/Production_Email_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Production_Email_Sent_At__c</fullName>
    <description>Timestamp when the post-approval email was sent to the Production team.</description>
    <label>Production Email Sent At</label>
    <type>DateTime</type>
</CustomField>