force-app/main/default/objects/Product_Forecast__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>Timestamp when the forecast was submitted for approval.</description>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>