force-app/main/default/objects/Product_Forecast__c/validationRules/Distributor_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Distributor_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Is_Monthly_Forecast__c, ISBLANK(Distributor__c))</errorConditionFormula>
    <errorDisplayField>Distributor__c</errorDisplayField>
    <errorMessage>Distributor is required.</errorMessage>
</ValidationRule>