force-app/main/default/objects/Product_Forecast__c/validationRules/Month_Year_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Month_Year_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Is_Monthly_Forecast__c, OR(ISBLANK(TEXT(Forecast_Month__c)), ISBLANK(TEXT(Forecast_Year__c))))</errorConditionFormula>
    <errorMessage>Forecast Month and Forecast Year are both required.</errorMessage>
</ValidationRule>