force-app/main/default/objects/Product_Forecast__c/validationRules/Product_Sub_Group_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Sub_Group_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Is_Monthly_Forecast__c, ISBLANK(TEXT(Product_Sub_Group__c)))</errorConditionFormula>
    <errorDisplayField>Product_Sub_Group__c</errorDisplayField>
    <errorMessage>Product Sub Group is required.</errorMessage>
</ValidationRule>