force-app/main/default/objects/Product_Forecast__c/validationRules/UOM_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>UOM_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Is_Monthly_Forecast__c, ISBLANK(TEXT(Forecast_UOM__c)))</errorConditionFormula>
    <errorDisplayField>Forecast_UOM__c</errorDisplayField>
    <errorMessage>Forecast UOM (KG or TON) is required.</errorMessage>
</ValidationRule>