force-app/main/default/objects/Product_Forecast__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>Distributor__c</columns>
    <columns>Product_Sub_Group__c</columns>
    <columns>Product__c</columns>
    <columns>Forecast_UOM__c</columns>
    <columns>Forecast__c</columns>
    <columns>Actual_Quantity_KG__c</columns>
    <columns>Forecast_Year__c</columns>
    <columns>Forecast_Month__c</columns>
    <columns>End_Date__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Today</label>
</ListView>